--- a/Regression for Financial Analysis.ipynb
+++ b/Regression for Financial Analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7cece00f",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "937741ce",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "19                  2000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "28574ab4",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
        "19       680000                 1250"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "47c6d05a",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a44f7abd",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "83ece64c",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "621f5bd6",
    "metadata": {},
    "outputs": [],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "f206f3ff",
    "metadata": {},
    "outputs": [
@@ -562,10 +562,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   37.95</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 13 Oct 2021</td> <th>  Prob (F-statistic):</th> <td>8.13e-06</td>\n",
+       "  <th>Date:</th>             <td>Fri, 15 Oct 2021</td> <th>  Prob (F-statistic):</th> <td>8.13e-06</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>15:30:53</td>     <th>  Log-Likelihood:    </th> <td> -260.43</td>\n",
+       "  <th>Time:</th>                 <td>16:27:49</td>     <th>  Log-Likelihood:    </th> <td> -260.43</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    20</td>      <th>  AIC:               </th> <td>   524.9</td>\n",
@@ -614,8 +614,8 @@
        "Dep. Variable:            House Price   R-squared:                       0.678\n",
        "Model:                            OLS   Adj. R-squared:                  0.660\n",
        "Method:                 Least Squares   F-statistic:                     37.95\n",
-       "Date:                Wed, 13 Oct 2021   Prob (F-statistic):           8.13e-06\n",
-       "Time:                        15:30:53   Log-Likelihood:                -260.43\n",
+       "Date:                Fri, 15 Oct 2021   Prob (F-statistic):           8.13e-06\n",
+       "Time:                        16:27:49   Log-Likelihood:                -260.43\n",
        "No. Observations:                  20   AIC:                             524.9\n",
        "Df Residuals:                      18   BIC:                             526.8\n",
        "Df Model:                           1                                         \n",
@@ -639,7 +639,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "692e5f8b",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "662716.3"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2a720d0d",
    "metadata": {},
    "outputs": [],
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "94a50610",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "401.91628631922595"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "16945b2e",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
        "260806.2360560964"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "b045022b",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
        "0.8235775534696924"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "4a29ae6a",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        "0.678279986579124"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "08946854",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "8.129642377231308e-06"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "5db93075",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
        "65.24299510636492"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,9 +808,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f973314e",
+   "metadata": {},
+   "source": [
+    "#### Multivariate Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f04d95cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XM = data[['House Size (sq.ft.)', 'Number of Rooms', 'Year of Construction']] #double brackets to show that it is multidimensional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2f150bce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>       <td>House Price</td>   <th>  R-squared:         </th> <td>   0.736</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.687</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   14.90</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Fri, 15 Oct 2021</td> <th>  Prob (F-statistic):</th> <td>6.82e-05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>16:30:40</td>     <th>  Log-Likelihood:    </th> <td> -258.43</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>    20</td>      <th>  AIC:               </th> <td>   524.9</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>    16</td>      <th>  BIC:               </th> <td>   528.9</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     3</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "            <td></td>              <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>                <td>-9.452e+06</td> <td>  5.4e+06</td> <td>   -1.752</td> <td> 0.099</td> <td>-2.09e+07</td> <td> 1.99e+06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>House Size (sq.ft.)</th>  <td>  341.8271</td> <td>  179.666</td> <td>    1.903</td> <td> 0.075</td> <td>  -39.049</td> <td>  722.703</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Number of Rooms</th>      <td>  1.16e+04</td> <td> 3.74e+04</td> <td>    0.310</td> <td> 0.760</td> <td>-6.77e+04</td> <td> 9.08e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Year of Construction</th> <td> 4863.5761</td> <td> 2697.969</td> <td>    1.803</td> <td> 0.090</td> <td> -855.862</td> <td> 1.06e+04</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td> 2.140</td> <th>  Durbin-Watson:     </th> <td>   1.938</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.343</td> <th>  Jarque-Bera (JB):  </th> <td>   1.747</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.676</td> <th>  Prob(JB):          </th> <td>   0.418</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 2.484</td> <th>  Cond. No.          </th> <td>5.40e+05</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 5.4e+05. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:            House Price   R-squared:                       0.736\n",
+       "Model:                            OLS   Adj. R-squared:                  0.687\n",
+       "Method:                 Least Squares   F-statistic:                     14.90\n",
+       "Date:                Fri, 15 Oct 2021   Prob (F-statistic):           6.82e-05\n",
+       "Time:                        16:30:40   Log-Likelihood:                -258.43\n",
+       "No. Observations:                  20   AIC:                             524.9\n",
+       "Df Residuals:                      16   BIC:                             528.9\n",
+       "Df Model:                           3                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "========================================================================================\n",
+       "                           coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "----------------------------------------------------------------------------------------\n",
+       "const                -9.452e+06    5.4e+06     -1.752      0.099   -2.09e+07    1.99e+06\n",
+       "House Size (sq.ft.)    341.8271    179.666      1.903      0.075     -39.049     722.703\n",
+       "Number of Rooms        1.16e+04   3.74e+04      0.310      0.760   -6.77e+04    9.08e+04\n",
+       "Year of Construction  4863.5761   2697.969      1.803      0.090    -855.862    1.06e+04\n",
+       "==============================================================================\n",
+       "Omnibus:                        2.140   Durbin-Watson:                   1.938\n",
+       "Prob(Omnibus):                  0.343   Jarque-Bera (JB):                1.747\n",
+       "Skew:                          -0.676   Prob(JB):                        0.418\n",
+       "Kurtosis:                       2.484   Cond. No.                     5.40e+05\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 5.4e+05. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "XM1 = sm.add_constant(XM)\n",
+    "\n",
+    "reg = sm.OLS(Y, XM1).fit()\n",
+    "\n",
+    "reg.summary()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba5821f",
+   "id": "4274cbbe",
    "metadata": {},
    "outputs": [],
    "source": []
