Update Fama French 3 Factor Test-Copy1.ipynb

--- a/Fama French 3 Factor Test-Copy1.ipynb
+++ b/Fama French 3 Factor Test-Copy1.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "import seaborn as sns\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\patrickogrady\\OneDrive - Provident10\\Documents\\Python Scripts\\FFtest.csv\" ,parse_dates=True,index_col=0)\n",
+    "df = pd.read_csv(r\"C:\\Users\\patrickogrady\\FFtest.csv\" ,parse_dates=True,index_col=0)\n",
     "\n"
    ]
   },
